export class Coin {
  id: string;
  name: string;
  coinSymbol: string;
  iconUrl: string;
  brandColor: string;
  exchangeRate: number;
}
