//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "bitmosys-q423-api" {
  database_type: 'MongoDB'
  Note: 'This is a sample project note'
}

Table User {
  id String [pk]
  name String [not null]
  balance Float [not null, default: 100000]
  wallets Wallet [not null]
  transactions Transaction [not null]
}

Table Coin {
  id String [pk]
  name String [not null]
  coinSymbol String [unique, not null]
  iconUrl String [not null]
  brandColor String [not null]
  exchangeRate Float [not null]
  wallets Wallet [not null]
  transactions Transaction [not null]
}

Table Wallet {
  id String [pk]
  balance Float [not null]
  userId String [not null]
  coinId String [not null]
  user User [not null]
  coin Coin [not null]
  transactions Transaction [not null]
}

Table Transaction {
  id String [pk]
  amount Float [not null]
  transactionValue Float [not null]
  transactionType String [not null]
  timestamp DateTime [default: `now()`, not null]
  userId String [not null]
  walletId String [not null]
  coinId String [not null]
  coin Coin [not null]
  user User [not null]
  wallet Wallet [not null]
}

Ref: Wallet.userId > User.id

Ref: Wallet.coinId > Coin.id

Ref: Transaction.coinId > Coin.id

Ref: Transaction.userId > User.id

Ref: Transaction.walletId > Wallet.id